# pre-commit-hooks

./: .checkov.yaml  .coveragerc  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff.toml  CONTRIBUTING.md  Dockerfile  Justfile  Makefile  README.md  docker-compose.yaml  flake.nix  mypy.ini  pyproject.toml  pytest.ini  renovate.json  requirements.txt  shell.nix
.devcontainer/: devcontainer.json  docker-compose.override.yaml  onCreateCommand.sh  postAttachCommand.sh
.devcontainer.example/: devcontainer.json
.github/workflows/: ci.yaml  release.yaml
.vscode.example/: extensions.json  settings.json
pre_commit_hooks/: check_directory_structure.py  check_file_pair.py  preferred_suffix.py
pre_commit_hooks/helpers/: debugger.py
pre_commit_hooks/util/: parser.py  parser_.py
src/: check_directory_structure.py
tests/: _helpers.py  conftest.py  test_check_directory_structure.py  test_check_file_pair.py  test_do_something.py  test_preferred_suffix.py
