[project]
name = "pre-commit-hooks"
description = "pre-commit hooks for personal use."
version = "0.4.3"
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
license = "MIT"
requires-python = ">=3.10, <4.0"
dependencies = ["typer>=0.15.1,<1"]

[project.scripts]
preferred-suffix = "pre_commit_hooks.preferred_suffix:entrypoint"

[dependency-groups]
dev = [
  "mypy==2.1.0",
  "ruff==0.15.17",
  "coverage==7.14.1",
  "pytest==9.1.0",
  "pytest-cov==7.1.0",
  "pytest-env==1.6.0",
  "pytest-sugar==1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pre_commit_hooks"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "FIX",
  "TD003",
  "ANN401",
  "D100",
  "D105",
  "D106",
  "ANN204",
  "UP007",  # Available since Python 3.10
  "COM812",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["D", "S101", "PLR2004", "SLF001"]
"scripts/*" = ["INP001", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = ['^\.venv/*']
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_reexport = true

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--cov",
  "--cov-report=term",
  "--cov-report=xml",
  "--show-capture=no",
  "--junitxml=junit.xml",
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning::"]

[tool.coverage.run]
include = ["pre_commit_hooks/*"]
omit = ["*tests*"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
